apps/base/market-replay/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: market-replay
  labels:
    name: market-replay
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
